# JWFilO

./: CMakeLists.txt  Main.qml  README.md  colors.cpp  colors.h  fileloadworker.cpp  fileloadworker.h  fileobject.cpp  fileobject.h  filo.cpp  filo.h  filoconfig.cpp  filoconfig.h  images.qrc  main.cpp  suffixobject.cpp  suffixobject.h  typeobject.cpp  typeobject.h
qmlElements/: FILOSquareImageButton.qml  FILOText.qml  GroupRectangle.qml
